--- a/esercizio.ipynb
+++ b/esercizio.ipynb
@@ -387,7 +387,7 @@
         "\n",
         "Come abbiamo osservato dai risultati sperimentali, le complessità computazionali di Insetion e Merge Sort sono direttamente riscontrabili nei loro tempi di esecuzione, portando così alla stessa conclusione della teoria.\n",
         "\n",
-        "**Infatti Merge Sort, negli insiemi da 10 a 1000 elementi, è circa 12 volte più veloce di Insertion Sort in media e circa 9 volte più veloce nel caso peggiore.**\n",
+        "**Infatti Merge Sort, negli insiemi da 10 a 1000 elementi a valori interi o a virgola mobile, è circa 12 volte più veloce di Insertion Sort in media e circa 9 volte più veloce nel caso peggiore.**\n",
         "\n",
         "Oltretutto, come già descritto in precedenza, il Merge Sort ci offre anche un ordinamento stabile rispetto all'ordine degli elementi, cosa che Insertion Sort non mantiene.\n",
         "\n",
